--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/d19f5d337d.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <!-- Nav bar -->
@@ -22,6 +23,8 @@
                 <li>Products</li>
                 <li>Sign Up</li>
                 <li>Log In</li>
+                <li><i class="fas fa-search"></i></li>
+                <li><i class="fas fa-shopping-cart"></i></li>
             </ul></span>
 
         </div>
