--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
             <h2>Influencer Products</h2>
         </div>
         <div class="menu-items">
-            <span><ul>
-                <li>Home</li>
-                <li>Products</li>
-                <li>Sign Up</li>
-                <li>Log In</li>
-                <li><i class="fas fa-search"></i></li>
-                <li><i class="fas fa-shopping-cart"></i></li>
-            </ul></span>
+            <ul>
+                <li><a href="">Home</a> </li>
+                <li><a href="">Products</a> </li>
+                <li><a href="">Sign Up</a></li>
+                <li><a href="">Log In</a></li>
+                <li><a href=""><i class="fas fa-search"></i></a></li>
+                <li><a><i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
 
         </div>
 
