animation and hovering done

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p>An influencer is someone in your niche or industry with sway over your target audience. 
                 Influencers have specialized knowledge, authority or insight into a specific subject. 
                 Their pre-existing presence in a niche makes them a useful launching pad for brands in search of credibility.</p>
-            <button>Prebook Now</button>
+            <button class="first-sec-button">Prebook Now <i class="fas fa-long-arrow-alt-right"></i></button>
         </div>
         <div class="First-sec-img">
             <img src="images/main-camera.png">
