--- a/index.html
+++ b/index.html
@@ -42,9 +42,25 @@
         </div>
         <div class="First-sec-img">
             <img src="images/main-camera.png">
-
         </div>
+    </section>
+    <!-- 1st Section -->
+
+    <section class="Second-sec">
+        <hr>
+        <div class="logos">
+            <img src="logos/Alibaba.svg">
+            <img src="logos/Amazon.svg">
+            <img src="logos/Daraz.pk Logo.svg">
+            <img src="logos/Ebay.svg">
+            <img src="logos/Rakuten.svg">
+            <img src="logos/Target.svg">
+            <img src="logos/Walmart.svg">
+        </div>
+        <hr>
+
 
     </section>
+    
 </body>
 </html>
