--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     </section>
     <!-- 1st Section -->
 
+    <!-- 2nd section logos -->
     <section class="Second-sec">
         <hr>
         <div class="logos">
@@ -58,9 +59,145 @@
             <img src="logos/Walmart.svg">
         </div>
         <hr>
+    </section>
+    <!-- 2nd section logos -->
 
+    <section class="Third-sec">
+        <h3>
+            Popular Collection
+        </h3>
+
+        <div class="items">
+            <div class="item">
+                <img src="images/tripod.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$50.48</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/mic.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$120.25</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/airpod.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$100.00</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/drone.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$980.25</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/lights.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$1200.00</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/setup.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$50.48</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/camera.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$50.48</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            <div class="item">
+                <img src="images/single-light.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$50.48</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+             <div class="item">
+                <img src="images/action.png">
+                <h4>Flex Tripod</h4>
+                <p class="price">$50.48</p>
+                <p><span class="rating"><i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>
+                    <i class="fas fa-star"></i>    
+                    <i class="fas fa-star"></i></span> 
+                    <span class="rating-txt"> 4.99</span>
+                </p>
+                <p>Worldwide shipping available</p>
+                <p>Buyers protection possible!</p>
+            </div>
+            
+
+        </div>
 
     </section>
-    
 </body>
 </html>
