--- a/index.html
+++ b/index.html
@@ -194,10 +194,21 @@
                 <p>Worldwide shipping available</p>
                 <p>Buyers protection possible!</p>
             </div>
-            
-
         </div>
-
+        <div >
+            <a href="" class="ext-link"><b>See more <i class="fas fa-long-arrow-alt-right"></i> </b></a>
+        </div>
     </section>
+    <footer>
+        <div class="footer-txt">
+            <h2>Influencer Products</h2>
+            <p id="first">Copyright &copy 2020 influencer Products</p>
+            <p id="second">All rights reserved</p>
+            <i class="fab fa-facebook-f icon-sty"></i>
+            <i class="fab fa-twitter icon-sty"></i>
+            <i class="fab fa-youtube icon-sty"></i>
+            <i class="fab fa-instagram icon-sty"></i>
+        </div>
+    </footer>
 </body>
 </html>
